--- a/PatinaBlazor/PatinaBlazor/appsettings.Production.json
+++ b/PatinaBlazor/PatinaBlazor/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySqlConnection": "Server=localhost;Database=patinadb;User=root;Password=yourpassword;Port=3306;"
+    "SqlServerConnection": "Data Source=tcp:s31.winhost.com;Initial Catalog=DB_175541_silzellnet;User ID=DB_175541_silzellnet_user;Password=****PROD_DB_PASSWORD****;Integrated Security=False;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
