--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,6 +73,21 @@ jobs:
                 <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
               </handlers>
               <aspNetCore processPath="dotnet" arguments=".\PatinaBlazor.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
+              <rewrite>
+                <rules>
+                  <rule name="Blazor Routes" stopProcessing="true">
+                    <match url=".*" />
+                    <conditions logicalGrouping="MatchAll">
+                      <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+                      <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+                      <add input="{REQUEST_URI}" pattern="^/api/" negate="true" />
+                      <add input="{REQUEST_URI}" pattern="^/_framework/" negate="true" />
+                      <add input="{REQUEST_URI}" pattern="^/_blazor/" negate="true" />
+                    </conditions>
+                    <action type="Rewrite" url="/" />
+                  </rule>
+                </rules>
+              </rewrite>
             </system.webServer>
           </location>
         </configuration>
