--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Publish
       run: dotnet publish ./PatinaBlazor/PatinaBlazor/PatinaBlazor.csproj -c Release -o ./publish --no-build
 
-    - name: Clean up debug files only
+    - name: Clean up debug files and uploads
       run: |
         # Remove only debugging files that shouldn't be deployed, keep localization
         echo "Removing debug files..."
@@ -45,6 +45,12 @@ jobs:
         rm -f ./publish/appsettings.Development.json
         find ./publish -name "*.pdb" -delete 2>/dev/null || true
         find ./publish -name "*Debug*" -type f -delete 2>/dev/null || true
+
+        # Remove files from uploads/collectables folder but keep the folder structure
+        echo "Removing files from uploads/collectables folder..."
+        if [ -d "./publish/wwwroot/uploads/collectables" ]; then
+          rm -f ./publish/wwwroot/uploads/collectables/* 2>/dev/null || true
+        fi
 
         # Wait for file operations to complete
         sync
