No more SQLite in dev.

--- a/PatinaBlazor/PatinaBlazor/appsettings.Development.json
+++ b/PatinaBlazor/PatinaBlazor/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=app.db"
+    "SqlServerConnection": "Server=localhost\\SQLEXPRESS;Database=silzellnet;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
