--- a/PatinaBlazor/PatinaBlazor/appsettings.Production.json
+++ b/PatinaBlazor/PatinaBlazor/appsettings.Production.json
@@ -8,5 +8,14 @@
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
+  },
+  "EmailSettings": {
+    "SmtpHost": "m04.internetmailserver.net",
+    "SmtpPort": 587,
+    "SmtpUser": "****SMTP_USER****",
+    "SmtpPassword": "****SMTP_PASSWORD****",
+    "FromEmail": "noreply@silzell.net",
+    "FromName": "Silzell.net",
+    "EnableSsl": true
   }
 }
