--- a/PatinaBlazor/PatinaBlazor/appsettings.json
+++ b/PatinaBlazor/PatinaBlazor/appsettings.json
@@ -8,5 +8,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+    "SmtpHost": "localhost",
+    "SmtpPort": 587,
+    "SmtpUser": "dev@localhost",
+    "SmtpPassword": "devpassword",
+    "FromEmail": "noreply@localhost",
+    "FromName": "Patina Blazor Dev",
+    "EnableSsl": true
+  }
 }
